--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 <div class="post-info">
   <ul>
-    <!-- <li><span class="date">$published$</span> $if(modified)$(Modified: $modified$)$endif$</li> -->
-    <li><span class="date">$date(published)$</span> $if(modified)$<span class="date">($modified$)$endif$</span></li>
+    <!-- <li><span class="date">$published$</span> $if(updated)$(Updated: $updated$)$endif$</li> -->
+    <li><span class="date">$date(published)$</span> $if(updated)$<span class="date">($updated$)$endif$</span></li>
     $if(tags)$
     $for(tags)$<li><a href="/tags.html#$it$">#$it$</a></li>$endfor$
     $endif$
