--- a/templates/default.html
+++ b/templates/default.html
@@ -8,6 +8,9 @@
     $if(published)$<meta name="dcterms.date" content="$published$"/>$endif$
     <title>$title$ | $site-title$</title>
     <link rel="stylesheet" href="/css/default.css"/>
+    <link rel="alternate" type="application/atom+xml" title="$site-title$" href="/atom.xml"/>
+    <link rel="alternate" type="application/rss+xml" title="$site-title$" href="/rss.xml"/>
+    <link rel="alternate" type="application/feed+json" title="$site-title$" href="/feed.json"/>
     $partial("templates/color-scheme-load.html")$
     $if(math)$$math$$endif$
   </head>
