--- a/templates/page-header.html
+++ b/templates/page-header.html
@@ -8,7 +8,7 @@
       </li>
       <li><a href="/posts">posts</a></li>
       <li><a href="/tags.html">tags</a></li>
-      <li><a href="/feed.xml">feed</a></li>
+      <li><a href="/atom.xml">feed</a></li>
       <li><button id="color-scheme-btn" class="color-scheme-btn" aria-label="toggle light scheme">auto</button></li>
     </ul>
   </nav>
