--- a/css/default.css
+++ b/css/default.css
@@ -1,9 +1,12 @@
 @import url("https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css");
-@import url("/css/flexoki.css");
-@import url("/css/sakura.css");
-@import url("/css/highlighting.css");
-@import url("/css/custom.css");
 
 *,::after,::before {
-  box-sizing: border-box
+  box-sizing: border-box;
+  min-width: 0;
+  position: relative;
 }
+
+$partial("css/flexoki.css")$
+$partial("css/sakura.css")$
+$partial("css/highlighting.css")$
+$partial("css/custom.css")$
