--- a/templates/default.html
+++ b/templates/default.html
@@ -11,8 +11,26 @@
     <link rel="alternate" type="application/atom+xml" title="$site-title$" href="/atom.xml"/>
     <link rel="alternate" type="application/rss+xml" title="$site-title$" href="/rss.xml"/>
     <link rel="alternate" type="application/feed+json" title="$site-title$" href="/feed.json"/>
-    $partial("templates/color-scheme-load.html")$
-    $if(math)$$math$$endif$
+    <script>
+      $partial("templates/color-scheme-load.js")$
+      $partial("templates/color-scheme-toggle.js")$
+    </script>
+    <script defer="true" src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
+    <script>document.addEventListener("DOMContentLoaded", function () {
+      var mathElements = document.getElementsByClassName("math");
+      var macros = [];
+      for (var i = 0; i < mathElements.length; i++) {
+        var texText = mathElements[i].firstChild;
+        if (mathElements[i].tagName == "SPAN") {
+          katex.render(texText.data, mathElements[i], {
+            displayMode: mathElements[i].classList.contains('display'),
+            throwOnError: false,
+            macros: macros,
+            fleqn: false
+          });
+    }}});
+    </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css" />
   </head>
   <body>
     $partial("templates/page-header.html")$
@@ -26,6 +44,5 @@
       $body$
     </main>
     $partial("templates/page-footer.html")$
-    $partial("templates/color-scheme-toggle.html")$
   </body>
 </html>
