--- a/templates/default.html
+++ b/templates/default.html
@@ -7,6 +7,7 @@
     $if(author)$<meta name="author" content="$author$"/>$endif$
     $if(published)$<meta name="dcterms.date" content="$published$"/>$endif$
     <title>$title$ | $site-title$</title>
+    $if(base)$<base href="$base$"/>$endif$
     <link rel="stylesheet" href="/css/default.css"/>
     <link rel="alternate" type="application/atom+xml" title="$site-title$" href="/atom.xml"/>
     <link rel="alternate" type="application/rss+xml" title="$site-title$" href="/rss.xml"/>
@@ -17,20 +18,20 @@
     </script>
     <script defer="true" src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
     <script>document.addEventListener("DOMContentLoaded", function () {
-      var mathElements = document.getElementsByClassName("math");
-      var macros = [];
-      for (var i = 0; i < mathElements.length; i++) {
-        var texText = mathElements[i].firstChild;
-        if (mathElements[i].tagName == "SPAN") {
-          katex.render(texText.data, mathElements[i], {
-            displayMode: mathElements[i].classList.contains('display'),
-            throwOnError: false,
-            macros: macros,
-            fleqn: false
-          });
-    }}});
+       var mathElements = document.getElementsByClassName("math");
+       var macros = [];
+       for (var i = 0; i < mathElements.length; i++) {
+         var texText = mathElements[i].firstChild;
+         if (mathElements[i].tagName == "SPAN") {
+           katex.render(texText.data, mathElements[i], {
+             displayMode: mathElements[i].classList.contains('display'),
+             throwOnError: false,
+             macros: macros,
+             fleqn: false
+           });
+     }}});
     </script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css"/>
   </head>
   <body>
     $partial("templates/page-header.html")$
