--- a/templates/page-header.html
+++ b/templates/page-header.html
@@ -6,9 +6,9 @@
           <a href="/">home</a>
         </div>
       </li>
-      <li><a href="/posts">posts</a></li>
+      <li><a href="/posts/">posts</a></li>
       <li><a href="/tags.html">tags</a></li>
-      <li><a href="/atom.xml">feed</a></li>
+      <li><a href="/feed.xml">feed</a></li>
       <li><button id="color-scheme-btn" class="color-scheme-btn" aria-label="toggle light scheme">auto</button></li>
     </ul>
   </nav>
