--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,7 +1,7 @@
 <div class="post-list">
   <ul>
   $for(posts)$
-    <li><span class="date">$published$</span><a href="$url$"><span class="title">$title$</span></a></li>
+    <li><span class="date">$date(published, "%Y-%m-%d")$</span><a href="$url$"><span class="title">$title$</span></a></li>
   $endfor$
   </ul>
 </div>
