--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 <div class="post-info">
   <ul>
-    <li><span class="date">$date(published)$</span></li>
-    $if(updated)$<li><span class="date">Updated: $date(updated)$</span></li>$endif$
+    <li>$date(published)$</li>
+    $if(updated)$<li>Updated: $date(updated)$</li>$endif$
     $if(tags)$$tags$$endif$
   </ul>
 </div>
