--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,105 @@
   position: relative;
 }
 
+$partial("css/fira_code.css")$
 $partial("css/flexoki.css")$
 $partial("css/sakura.css")$
 $partial("css/highlighting.css")$
-$partial("css/custom.css")$
+
+/* Light and Dark Theme Handling */
+.color-scheme-btn, .color-scheme-btn:hover {
+  background: none;
+  border: none;
+  opacity: 50%;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.color-scheme-btn:hover {
+  opacity: 100%;
+}
+
+/* Hide mode toggle when printing */
+@media print {
+  .color-scheme-btn, .color-scheme-btn:hover {
+      visibility: hidden;
+  }
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+.page-header {
+  font-size: 2.0rem;
+}
+
+.page-header ul {
+  column-gap: 5%;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+}
+
+.page-footer, footer {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: auto;
+}
+
+.post-info * {
+  color: var(--color-tx-muted);
+}
+
+.post-info ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.post-info li {
+  display: inline-block;
+}
+
+.post-info li:not(:last-child) {
+  padding-right: 1ch;
+}
+
+.post-list .date {
+  color: var(--color-tx-muted);
+  font-family: var(--font-family-monospace);
+  margin-right: 2%;
+}
+
+.post-list ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+h2 a, h3 a, h4 a, h5 a, h6 a {
+  text-decoration: none;
+}
+
+/* taken from the default pandoc styles */
+span.smallcaps {
+  font-variant: small-caps;
+}
+
+div.columns {
+  display: flex; gap: min(4vw, 1.5em);
+}
+
+div.column {
+  flex: auto; overflow-x: auto;
+}
