--- a/templates/default.html
+++ b/templates/default.html
@@ -8,9 +8,11 @@
     $if(published)$<meta name="dcterms.date" content="$published$"/>$endif$
     <title>$title$ | $site-title$</title>
     $if(base)$<base href="$base$"/>$endif$
+    <noscript>
+      <link rel="stylesheet" href="/css/noscript.css"/>
+    </noscript>
     <link rel="stylesheet" href="/css/default.css"/>
-    <link rel="alternate" type="application/atom+xml" title="$site-title$" href="/atom.xml"/>
-    <link rel="alternate" type="application/rss+xml" title="$site-title$" href="/rss.xml"/>
+    <link rel="alternate" type="application/atom+xml" title="$site-title$" href="/feed.xml"/>
     <link rel="alternate" type="application/feed+json" title="$site-title$" href="/feed.json"/>
     <script>
       $partial("templates/color-scheme-load.js")$
