relicense and css tweaks

--- a/css/default.css
+++ b/css/default.css
@@ -66,6 +66,11 @@ p:last-child {
   color: var(--color-tx-muted);
 }
 
+/* HACK: no clue how to get muted links with colored hover */
+.post-info a {
+  color: inherit;
+}
+
 .post-info ul {
   list-style: none;
   padding: 0;
