--- a/css/default.css
+++ b/css/default.css
@@ -97,8 +97,20 @@ p:last-child {
   margin: 0;
 }
 
-h2 a, h3 a, h4 a, h5 a, h6 a {
+/* h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { */
+/*   text-decoration: none; */
+/* } */
+
+/* h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover { */
+/*   text-decoration: underline; */
+/* } */
+
+:is(h1, h2, h3, h4, h5, h6) a {
   text-decoration: none;
+}
+
+:is(h1, h2, h3, h4, h5, h6) a:hover {
+  text-decoration: underline;
 }
 
 /* taken from the default pandoc styles */
@@ -112,4 +124,32 @@ div.columns {
 
 div.column {
   flex: auto; overflow-x: auto;
+}
+
+div.csl-bib-body { }
+
+div.csl-entry {
+  clear: both;
+/* $if(csl-entry-spacing)$ */
+/*   margin-bottom: $csl-entry-spacing$; */
+/* $endif$ */
+}
+
+.hanging-indent div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+
+div.csl-indent {
+  margin-left: 2em;
 }
