--- a/templates/default.html
+++ b/templates/default.html
@@ -8,15 +8,16 @@
     $if(published)$<meta name="dcterms.date" content="$published$"/>$endif$
     <title>$title$ | $site-title$</title>
     $if(base)$<base href="$base$"/>$endif$
+    <link rel="alternate" type="application/atom+xml" title="$site-title$" href="/feed.xml"/>
+    <link rel="alternate" type="application/feed+json" title="$site-title$" href="/feed.json"/>
     <noscript>
       <link rel="stylesheet" href="/css/noscript.css"/>
     </noscript>
     <link rel="stylesheet" href="/css/default.css"/>
-    <link rel="alternate" type="application/atom+xml" title="$site-title$" href="/feed.xml"/>
-    <link rel="alternate" type="application/feed+json" title="$site-title$" href="/feed.json"/>
     <script>
       $partial("templates/color-scheme-load.js")$
       $partial("templates/color-scheme-toggle.js")$
+      $partial("templates/agda-hover.js")$
     </script>
     <script defer="true" src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
     <script>document.addEventListener("DOMContentLoaded", function () {
