--- a/templates/default.html.mustache
+++ b/templates/default.html.mustache
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="$lang$" xml:lang="$lang$"$if(dir)$ dir="$dir$"$endif$ color-scheme="auto">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ lang }}" xml:lang="{{ lang }}" {{# dir }}dir="{{.}}" {{/ dir }}color-scheme="auto">
   <head>
     <meta charset="utf-8"/>
-    <meta name="generator" content="pandoc"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
-    $if(author)$<meta name="author" content="$author$"/>$endif$
-    $if(published)$<meta name="dcterms.date" content="$published$"/>$endif$
-    <title>$title$ | $site-title$</title>
-    $if(base)$<base href="$base$"/>$endif$
-    <link rel="alternate" type="application/atom+xml" title="$site-title$" href="/feed.xml"/>
-    <link rel="alternate" type="application/feed+json" title="$site-title$" href="/feed.json"/>
+    <meta name="author" content="{{ author }}"/>
+    {{# published }}<meta name="dcterms.date" content="{{.}}"/>{{/ published }}
+    <title>{{ title }} | {{ site-title }}</title>
+    {{# base }}<base href="{{.}}"/>{{/ base }}
+    <link rel="alternate" type="application/atom+xml" title="{{ site-title }}" href="/feed.xml"/>
+    <link rel="alternate" type="application/feed+json" title="{{ site-title }}" href="/feed.json"/>
     <noscript>
       <link rel="stylesheet" href="/css/noscript.css"/>
     </noscript>
     <link rel="stylesheet" href="/css/default.css"/>
     <script>
-      $partial("templates/color-scheme-load.js")$
-      $partial("templates/color-scheme-toggle.js")$
-      $partial("templates/agda-hover.js")$
+      {{> color-scheme-load.js }}
+      {{> color-scheme-toggle.js }}
+      {{> agda-hover.js }}
     </script>
     <script defer="true" src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
     <script>document.addEventListener("DOMContentLoaded", function () {
@@ -37,16 +36,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css"/>
   </head>
   <body>
-    $partial("templates/page-header.html")$
+    {{> page-header.html }}
     <main>
-      $if(hide-title)$$else$
+      {{> page-header.html }}
+      {{^ hide-title }}
       <header id="title-block-header">
-        <h1 class="title">$title$</h1>
-        $if(subtitle)$<p class="subtitle">$subtitle$</p>$endif$
+        <h1 class="title">{{ title }}</h1>
+        {{# subtitle }}<p class="subtitle">{{.}}</p>{{/ subtitle }}
       </header>
-      $endif$
-      $body$
+      {{/ hide-title }}
+      {{& body }}
     </main>
-    $partial("templates/page-footer.html")$
+    {{> page-footer.html }}
   </body>
 </html>
