--- a/templates/post.html.mustache
+++ b/templates/post.html.mustache
@@ -1,8 +1,58 @@
-<div class="post-info">
-  <ul>
-    <li>{{ published }}</li>
-    {{# updated }}<li>Updated: $date(updated)$</li>{{/ updated }}
-    {{# tags }}{{.}}{{/ tags }}
-  </ul>
-</div>
-<article>{{& body }}</article>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ site.lang }}" xml:lang="{{ site.lang }}" {{# direction }}dir="{{.}}" {{/ direction }}color-scheme="auto">
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+    <meta name="author" content="{{ site.author }}"/>
+    {{# published }}<meta name="dcterms.date" content="{{.}}"/>{{/ published }}
+    <title>{{ title }} | {{ site.title }}</title>
+    {{# base }}<base href="{{.}}"/>{{/ base }}
+    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml"/>
+    <link rel="alternate" type="application/feed+json" title="{{ site.title }}" href="/feed.json"/>
+    <noscript>
+      <link rel="stylesheet" href="/css/noscript.css"/>
+    </noscript>
+    <link rel="stylesheet" href="/css/default.css"/>
+    <script>
+      {{> color-scheme-load.js }}
+      {{> color-scheme-toggle.js }}
+      {{> agda-hover.js }}
+    </script>
+    <script defer="true" src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
+    <script>document.addEventListener("DOMContentLoaded", function () {
+       var mathElements = document.getElementsByClassName("math");
+       var macros = [];
+       for (var i = 0; i < mathElements.length; i++) {
+         var texText = mathElements[i].firstChild;
+         if (mathElements[i].tagName == "SPAN") {
+           katex.render(texText.data, mathElements[i], {
+             displayMode: mathElements[i].classList.contains('display'),
+             throwOnError: false,
+             macros: macros,
+             fleqn: false
+           });
+     }}});
+    </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css"/>
+  </head>
+  <body>
+    {{> header.html }}
+    <main>
+      {{^ hide-title }}
+      <header id="title-block-header">
+        <h1 class="title">{{ title }}</h1>
+        {{# subtitle }}<p class="subtitle">{{.}}</p>{{/ subtitle }}
+      </header>
+      {{/ hide-title }}
+      <div class="post-info">
+        <ul>
+          <li>{{ published }}</li>
+          {{# updated }}<li>Updated: $date(updated)$</li>{{/ updated }}
+          {{# tags }}{{.}}{{/ tags }}
+        </ul>
+      </div>
+      <article>{{& body }}</article>
+    </main>
+    {{> footer.html }}
+  </body>
+</html>
