improve work sharing and work in post index
- introduced liftAction to lift Actions in to Rules with sharing
- worked on generation of post index page by improving templating system

--- a/templates/footer.html.mustache
+++ b/templates/footer.html.mustache
@@ -3,6 +3,6 @@
   <footer>
     <span xmlns:cc="http://creativecommons.org/ns#" >the content of this site is licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-NC-SA 4.0</a>.</span>
     <!-- <span>made with <a href="http://jaspervdj.be/hakyll">hakyll</a>: <a href="$site-source$/tree/$git-hash$"><code>$git-hash$</code></a></span> -->
-    <span><a href="{{ site.source }}/tree/{{ site.hash }}"><code>{{ site.hash }}</code></a></span>
+    <span>revision <a href="{{ site.source }}/tree/{{ site.hash }}"><code>{{ site.hash }}</code></a></span>
   </footer>
 </div>
