--- a/templates/page.html.mustache
+++ b/templates/page.html.mustache
@@ -16,22 +16,10 @@
     <script>
       {{> color-scheme-load.js }}
       {{> color-scheme-toggle.js }}
-      {{> agda-hover.js }}
     </script>
     <script defer="true" src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
-    <script>document.addEventListener("DOMContentLoaded", function () {
-       var mathElements = document.getElementsByClassName("math");
-       var macros = [];
-       for (var i = 0; i < mathElements.length; i++) {
-         var texText = mathElements[i].firstChild;
-         if (mathElements[i].tagName == "SPAN") {
-           katex.render(texText.data, mathElements[i], {
-             displayMode: mathElements[i].classList.contains('display'),
-             throwOnError: false,
-             macros: macros,
-             fleqn: false
-           });
-     }}});
+    <script>
+      {{> katex-load.js }}
     </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css"/>
   </head>
@@ -40,8 +28,8 @@
     <main>
       {{^ hide-title }}
       <header id="title-block-header">
-          <h1 class="title">{{ title }}</h1>
-          {{# subtitle }}<p class="subtitle">{{.}}</p>{{/ subtitle }}
+        <h1 class="title">{{ title }}</h1>
+        {{# subtitle }}<p class="subtitle">{{.}}</p>{{/ subtitle }}
       </header>
       {{/ hide-title }}
       <article>{{& body }}</article>
