--- a/templates/post.html.mustache
+++ b/templates/post.html.mustache
@@ -19,19 +19,8 @@
       {{> agda-hover.js }}
     </script>
     <script defer="true" src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
-    <script>document.addEventListener("DOMContentLoaded", function () {
-       var mathElements = document.getElementsByClassName("math");
-       var macros = [];
-       for (var i = 0; i < mathElements.length; i++) {
-         var texText = mathElements[i].firstChild;
-         if (mathElements[i].tagName == "SPAN") {
-           katex.render(texText.data, mathElements[i], {
-             displayMode: mathElements[i].classList.contains('display'),
-             throwOnError: false,
-             macros: macros,
-             fleqn: false
-           });
-     }}});
+    <script>
+      {{> katex-load.js }}
     </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css"/>
   </head>
@@ -47,7 +36,7 @@
       <div class="post-info">
         <ul>
           <li>{{ published }}</li>
-          {{# updated }}<li>Updated: $date(updated)$</li>{{/ updated }}
+          {{# updated }}<li>Updated: {{.}}</li>{{/ updated }}
           {{# tags }}{{.}}{{/ tags }}
         </ul>
       </div>
