finished generation of post index
the implementation of spans was not very robust we are running into
parsing issues for the generated pages.

--- a/templates/post-list.md.mustache
+++ b/templates/post-list.md.mustache
@@ -1,7 +1,7 @@
-::: {.post-list}
+::: {.postList}
 
 {{# site.posts }}
-+ [{{ published }}]{.date}[[{{ title }}]{.title}]({{ url }})
++ [{{ published }}]{.date}[[{{ title }}]{.title}](/posts/{{ slug }})
 {{/ site.posts }}
 
 :::
