implemented atom feeds and cleaned up html
fixed issues with html validation except for a few minor ones concering
the custom color-scheme tags and invalid xml due the the license in the footer

--- a/templates/atom-item.xml.mustache
+++ b/templates/atom-item.xml.mustache
@@ -1,8 +1,8 @@
 <entry>
     <title>{{ title }}</title>
-    <link href="$root$$url$"/>
-    <id>$root$$url$</id>
-    <published>{{ published-iso8601 }}</published>
-    <updated>{{ updated-iso8601 }}</updated>
+    <link href="{{ site.url }}/{{ slug }}"/>
+    <id>{{ site.url }}/{{ slug }}</id>
+    <published>{{ published.iso8601 }}</published>
+    <updated>{{ updated.iso8601 }}</updated>
     <content type="html">{{ body }}</content>
 </entry>
