--- a/templates/post-list.md.mustache
+++ b/templates/post-list.md.mustache
@@ -1,5 +1,5 @@
 ::: {.post-list}
 {{# site.posts }}
-+ [{{ published }}]{.date}[[{{ title }}]{.title}](/posts/{{ slug }})
++ [{{ published.time }}]{.date}[[{{ title }}]{.title}](/posts/{{ slug }})
 {{/ site.posts }}
 :::
