--- a/css/default.css
+++ b/css/default.css
@@ -1,15 +1,9 @@
-@import url("https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css");
+@import url("/css/normalize.css");
 @import url("/css/fira_code.css");
 @import url("/css/flexoki.css");
 @import url("/css/sakura.css");
 @import url("/css/highlighting.css");
 @import url("/css/agda.css");
-
-*,::after,::before {
-  box-sizing: border-box;
-  min-width: 0;
-  position: relative;
-}
 
 /* Light and Dark Theme Handling */
 .color-scheme-btn, .color-scheme-btn:hover {
