--- a/templates/feed-item.json.mustache
+++ b/templates/feed-item.json.mustache
@@ -1,9 +1,9 @@
 {
-  "id": "$root$$url$",
-  "url": "$root$$url$",
-  "content_html": "{{ body }}",
-  "title": "$title$",
-  "date_published": "{{ published-iso8601 }}$",
-  "date_modified": "{{ updated-iso8601 }}",
+  "id": "{{ site.url }}/{{ slug }}",
+  "url": "{{ site.url }}/{{ slug }}",
+  "content_html": "{{& body }}",
+  "title": "{{ title }}",
+  "date_published": "{{ published }}",
+  "date_modified": "{{ updated }}",
   "tags": [{{ tags }}]
 }
