--- a/templates/page.html.mustache
+++ b/templates/page.html.mustache
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="{{ site.lang }}" xml:lang="{{ site.lang }}" {{# direction }}dir="{{.}}" {{/ direction }}color-scheme="auto">
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
-    <meta name="author" content="{{ site.author }}"/>
-    {{# published }}<meta name="dcterms.date" content="{{.}}"/>{{/ published }}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta name="author" content="{{ site.author }}">
+    {{# published.time }}<meta name="dcterms.date" content="{{.}}">{{/ published.time }}
     <title>{{ title }} | {{ site.title }}</title>
     {{# base }}<base href="{{.}}"/>{{/ base }}
-    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml"/>
-    <link rel="alternate" type="application/feed+json" title="{{ site.title }}" href="/feed.json"/>
+    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+    <link rel="alternate" type="application/feed+json" title="{{ site.title }}" href="/feed.json">
     <noscript>
-      <link rel="stylesheet" href="/css/noscript.css"/>
+      <link rel="stylesheet" href="/css/noscript.css">
     </noscript>
-    <link rel="stylesheet" href="/css/default.css"/>
+    <link rel="stylesheet" href="/css/default.css">
     <script>
       {{> color-scheme-load.js }}
       {{> color-scheme-toggle.js }}
     </script>
-    <script defer="true" src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
     <script>
       {{> katex-load.js }}
     </script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css">
   </head>
   <body>
     {{> header.html }}
     <main>
-      {{^ hide-title }}
-      <header id="title-block-header">
-        <h1 class="title">{{ title }}</h1>
-        {{# subtitle }}<p class="subtitle">{{.}}</p>{{/ subtitle }}
-      </header>
-      {{/ hide-title }}
-      <article>{{& body }}</article>
+      <article>
+        {{^ hide-title }}
+        <header id="title-block-header">
+          <h1 class="title">{{ title }}</h1>
+          {{# subtitle }}<p class="subtitle">{{.}}</p>{{/ subtitle }}
+        </header>
+        {{/ hide-title }}
+        {{& body }}
+      </article>
     </main>
     {{> footer.html }}
   </body>
