--- a/templates/post-list.html.mustache
+++ b/templates/post-list.html.mustache
@@ -1,7 +1,7 @@
 <div class="post-list">
   <ul>
   {{# posts }}
-    <li><span class="date">{{ published }}</span><a href="{{ slug }}"><span class="title">{{ title }}</span></a></li>
+    <li><span class="date">{{ published.time }}</span><a href="{{ slug }}"><span class="title">{{ title }}</span></a></li>
   {{/ posts }}
   </ul>
 </div>
