clean up routing primitives

--- a/templates/post-list.md.mustache
+++ b/templates/post-list.md.mustache
@@ -1,5 +1,5 @@
 ::: {.post-list}
 {{# site.posts }}
-+ [{{ published.time }}]{.date}[[{{ title }}]{.title}](/posts/{{ slug }})
+{{# published.time }}+ [{{.}}]{.date}[[{{ title }}]{.title}](/posts/{{ slug }}){{/ published.time }}
 {{/ site.posts }}
 :::
