--- a/templates/header.html.mustache
+++ b/templates/header.html.mustache
@@ -7,6 +7,7 @@
         </div>
       </li>
       <li><a href="/posts/">posts</a></li>
+      <li><a href="/notes">notes</a></li>
       <li><a href="/tags">tags</a></li>
       <li><a href="/feed.xml">feed</a></li>
       <li><button id="color-scheme-btn" class="color-scheme-btn" aria-label="toggle light scheme">auto</button></li>
