--- a/templates/page.html.mustache
+++ b/templates/page.html.mustache
@@ -26,7 +26,9 @@
   <body>
     {{> header.html }}
     <main>
+      {{^ naked-main }}
       <article>
+      {{/ naked-main }}
         {{^ hide-title }}
         <header id="title-block-header">
           <h1 class="title">{{ title }}</h1>
@@ -34,7 +36,9 @@
         </header>
         {{/ hide-title }}
         {{& body }}
+      {{^ naked-main }}
       </article>
+      {{/ naked-main }}
     </main>
     {{> footer.html }}
   </body>
