--- a/css/default.css
+++ b/css/default.css
@@ -139,3 +139,11 @@ div.csl-right-inline {
 div.csl-indent {
   margin-left: 2em;
 }
+
+/* a.footnote:before { */
+/*  content: "["; */
+/* } */
+
+/* a.footnote:after { */
+/*     content: "]"; */
+/* } */
