--- a/templates/page.html.mustache
+++ b/templates/page.html.mustache
@@ -17,12 +17,14 @@
       {{> color-scheme-load.js }}
       {{> color-scheme-toggle.js }}
     </script>
+    {{# katex }}
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
     <script>
       {{> katex-load.js }}
     </script>
-    {{# site.debug }}<script defer src="https://livejs.com/live.js"></script>{{/ site.debug }}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css">
+    {{/ katex }}
+    {{# site.debug }}<script defer src="https://livejs.com/live.js"></script>{{/ site.debug }}
   </head>
   <body>
     {{> header.html }}
