--- a/templates/post.html.mustache
+++ b/templates/post.html.mustache
@@ -16,7 +16,8 @@
     <script>
       {{> color-scheme-load.js }}
       {{> color-scheme-toggle.js }}
-      {{> agda-hover.js }}
+      {{# agda }}{{> agda-hover.js }}{{/ agda }}
+    </script>
     {{# katex }}
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js"></script>
     <script>
