prettify html and post body

--- a/templates/atom-item.xml.mustache
+++ b/templates/atom-item.xml.mustache
@@ -4,5 +4,7 @@
     <id>{{ site.url }}/{{ slug }}</id>
     <published>{{ published.iso8601 }}</published>
     <updated>{{ updated.iso8601 }}</updated>
-    <content type="html">{{ body }}</content>
+    <content type="html">
+        {{ body }}
+    </content>
 </entry>
