--- a/css/flexoki.css
+++ b/css/flexoki.css
@@ -71,70 +71,38 @@
   --flexoki-magenta-400: #CE5D97;
 }
 
-:root[color-scheme="light"] {
-  color-scheme: light;
-  --color-tx-normal: var(--flexoki-black);
-  --color-tx-muted: var(--flexoki-600);
-  --color-tx-faint: var(--flexoki-300);
+:root {
+  color-scheme: light dark;
 
-  --color-ui-normal: var(--flexoki-100);
-  --color-ui-hovered: var(--flexoki-150);
-  --color-ui-active: var(--flexoki-200);
+  --color-tx-normal: light-dark(var(--flexoki-black), var(--flexoki-200));
+  --color-tx-muted:  light-dark(var(--flexoki-600), var(--flexoki-500));
+  --color-tx-faint:  light-dark(var(--flexoki-300), var(--flexoki-700));
 
-  --color-bg-primary: var(--flexoki-paper);
-  --color-bg-secondary: var(--flexoki-50);
+  --color-ui-normal: light-dark(var(--flexoki-100), var(--flexoki-900));
+  --color-ui-hovered: light-dark(var(--flexoki-150), var(--flexoki-850));
+  --color-ui-active: light-dark(var(--flexoki-200), var(--flexoki-800));
 
-  --color-highlight: var(--flexoki-yellow-100);
+  --color-bg-primary: light-dark(var(--flexoki-paper), var(--flexoki-black));
+  --color-bg-secondary: light-dark(var(--flexoki-50), var(--flexoki-950));
 
-  --color-re: var(--flexoki-red-600);
-  --color-or: var(--flexoki-orange-600);
-  --color-ye: var(--flexoki-yellow-600);
-  --color-gr: var(--flexoki-green-600);
-  --color-cy: var(--flexoki-cyan-600);
-  --color-bl: var(--flexoki-blue-600);
-  --color-pu: var(--flexoki-purple-600);
-  --color-ma: var(--flexoki-magenta-600);
+  --color-highlight: light-dark(var(--flexoki-yellow-100), var(--flexoki-yellow-900));
 
-  --color-re-2: var(--flexoki-red-400);
-  --color-or-2: var(--flexoki-orange-400);
-  --color-ye-2: var(--flexoki-yellow-400);
-  --color-gr-2: var(--flexoki-green-400);
-  --color-cy-2: var(--flexoki-cyan-400);
-  --color-bl-2: var(--flexoki-blue-400);
-  --color-pu-2: var(--flexoki-purple-400);
-  --color-ma-2: var(--flexoki-magenta-400);
-}
+  --color-re: light-dark(var(--flexoki-red-600), var(--flexoki-red-400));
+  --color-or: light-dark(var(--flexoki-orange-600), var(--flexoki-orange-400));
+  --color-ye: light-dark(var(--flexoki-yellow-600), var(--flexoki-yellow-400));
+  --color-gr: light-dark(var(--flexoki-green-600), var(--flexoki-green-400));
+  --color-cy: light-dark(var(--flexoki-cyan-600), var(--flexoki-cyan-400));
+  --color-bl: light-dark(var(--flexoki-blue-600), var(--flexoki-blue-400));
+  --color-pu: light-dark(var(--flexoki-purple-600), var(--flexoki-purple-400));
+  --color-ma: light-dark(var(--flexoki-magenta-600), var(--flexoki-magenta-400));
 
-:root[color-scheme="dark"] {
-  color-scheme: dark;
-  --color-tx-normal: var(--flexoki-200);
-  --color-tx-muted: var(--flexoki-500);
-  --color-tx-faint: var(--flexoki-700);
 
-  --color-ui-normal: var(--flexoki-900);
-  --color-ui-hovered: var(--flexoki-850);
-  --color-ui-active: var(--flexoki-800);
-
-  --color-bg-primary: var(--flexoki-black);
-  --color-bg-secondary: var(--flexoki-950);
-
-  --color-highlight: var(--flexoki-yellow-900);
-
-  --color-re: var(--flexoki-red-400);
-  --color-or: var(--flexoki-orange-400);
-  --color-ye: var(--flexoki-yellow-400);
-  --color-gr: var(--flexoki-green-400);
-  --color-cy: var(--flexoki-cyan-400);
-  --color-bl: var(--flexoki-blue-400);
-  --color-pu: var(--flexoki-purple-400);
-  --color-ma: var(--flexoki-magenta-400);
-
-  --color-re-2: var(--flexoki-red-600);
-  --color-or-2: var(--flexoki-orange-600);
-  --color-ye-2: var(--flexoki-yellow-600);
-  --color-gr-2: var(--flexoki-green-600);
-  --color-cy-2: var(--flexoki-cyan-600);
-  --color-bl-2: var(--flexoki-blue-600);
-  --color-pu-2: var(--flexoki-purple-600);
-  --color-ma-2: var(--flexoki-magenta-600);
+  --color-re-2: light-dark(var(--flexoki-red-400), var(--flexoki-red-600));
+  --color-or-2: light-dark(var(--flexoki-orange-400), var(--flexoki-orange-600));
+  --color-ye-2: light-dark(var(--flexoki-yellow-400), var(--flexoki-yellow-600));
+  --color-gr-2: light-dark(var(--flexoki-green-400), var(--flexoki-green-600));
+  --color-cy-2: light-dark(var(--flexoki-cyan-400), var(--flexoki-cyan-600));
+  --color-bl-2: light-dark(var(--flexoki-blue-400), var(--flexoki-blue-600));
+  --color-pu-2: light-dark(var(--flexoki-purple-400), var(--flexoki-purple-600));
+  --color-ma-2: light-dark(var(--flexoki-magenta-400), var(--flexoki-magenta-600));
 }
